@@ -29,6 +29,7 @@ LIBDIR     = $(PREFIX)/lib
 
 # Server only - Output directory
 HTMLDIR    = $(PREFIX)/var/www
+CGIDIR     = $(HTMLDIR)/cgi
 
 # Client only - Where to put RRD files and other intenal data
 DBDIR      = $(DESTDIR)/var/opt/munin
