@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.21  2004/06/24 14:32:17  jimmyo
+# More work on output_graphs (renamed to graph_strategy, amongst others).
+#
 # Revision 1.20  2004/06/23 17:48:06  jimmyo
 # Bugfix in cdef calculations.
 #
@@ -213,7 +216,7 @@ it as the user \"munin\". Aborting.\n\n";
 
 my $config= &munin_config ($conffile);
 
-if (&munin_get_val ($config, "output_graphs", "cron") ne "cron" and $cron)
+if (&munin_get_val ($config, "graph_strategy", "cron") ne "cron" and $cron)
 { # We're run from cron, but munin.conf says we use dynamic graph generation
     exit 0;
 }
